activity cards - correct alignments, template

--- a/src/routes/education/education.css
+++ b/src/routes/education/education.css
@@ -7,56 +7,7 @@
 #education-container {
   display: flex;
   width: 85%;
-  margin: 5rem auto;
-}
-
-.activity {
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-  padding: 0.5rem 0;
-  margin: 0.1rem auto;
-  text-transform: uppercase;
-}
-
-#activity-card {
-  width: 85%;
-  min-height: 58vh;
-  margin: 1.5rem auto auto auto;
-  opacity: 0;
-  display: flex;
-}
-
-#activity-card > div:first-child {
-  width: 50%;
-  height: auto;
-  padding: 0.5rem 0.3rem;
-}
-
-.activity:hover {
-  cursor: pointer;
-}
-
-.reflection-paragraph {
-  font-size: 1rem;
-  padding: 0 10px;
-}
-
-.activity-reflection-header {
-  width: 100%;
-  text-align: center;
-  display: inline-block;
-  text-transform: uppercase;
-  font-size: 1.3rem;
-  font-weight: bold;
-  padding-top: 10px;
-}
-
-.reflection-container {
-  width: 49%;
-  height: auto;
-  border: 3px solid;
-  padding: 0.5rem 0.3rem;
+  margin: -3rem auto 6rem auto;
 }
 
 /* Education Card */
@@ -95,12 +46,11 @@
   animation: glass 2500ms ease 0s infinite forwards alternate;
 }
 
-#education-card:hover{
+#education-card:hover, .activity-card:hover{
   transform: translateY(-5%);
-  cursor: pointer;
 }
 
-#education-card label{
+#education-card, #education-card label, .activity-card, .activity-card label{
   cursor: pointer;
 }
 
@@ -108,4 +58,36 @@
   width: 100%;
   font-size: 2rem;
   font-weight: bold;
+}
+
+.activity-card {
+  border-radius: 1rem 3rem;
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(30px);
+  background: rgba(255, 255, 255, 0.1);
+  padding: 1rem 0.5rem;
+  float: left;
+  margin: 1rem auto;
+  overflow: hidden;
+}
+
+.activity-card:before {
+  content: "";
+  background: rgba(255, 255, 255, 0.3);
+  width: 20%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: -100%;
+  cursor: pointer;
+  transform: skewX(45deg);
+  animation: glass 2500ms ease 0s infinite forwards alternate;
+}
+
+#activities-container {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0 auto;
 }
